classDiagram
    direction TB

    %% ─────────── Domain Models ───────────
    class User {
        -UUID id
        -String name
        -String email
        -String passwordHash
        -Set~Role~ roles
        -Instant createdAt
        +can(Permission) boolean
        +getRoles() Set~Role~
    }
    class Vehicle {
        -UUID id
        -String plate
        -String model
        -int year
        -VehicleStatus status
        -Instant createdAt
        +markInUse()
        +markAvailable()
        +markMaintenance()
    }
    class BorrowingRequest {
        -UUID id
        -UUID userId
        -UUID vehicleId
        -Instant periodStart
        -Instant periodEnd
        -String purpose
        -BorrowingState state
        -String reviewNote
        +approve(String)
        +reject(String)
        +startUse()
        +complete()
        +getStateName() String
        +transitionState(BorrowingState, String)
    }
    class MaintenanceRecord {
        -UUID id
        -UUID vehicleId
        -LocalDate date
        -List~String~ items
        -BigDecimal cost
        -LocalDate nextDueDate
        -Integer nextDueKm
        +isDue(LocalDate, int) boolean
    }
    class VehicleStatus {
        <<enumeration>>
        AVAILABLE
        IN_USE
        MAINTENANCE
    }

    %% ─────────── Role / Factory Method ───────────
    class Role {
        <<interface>>
        +getName() String
        +getPermissions() Set~Permission~
    }
    class AdminRole {
        +getName() String
        +getPermissions() Set~Permission~
    }
    class EmployeeRole {
        +getName() String
        +getPermissions() Set~Permission~
    }
    class RoleFactory {
        +create(String)$ Role
    }
    class Permission {
        <<enumeration>>
        APPROVE_BORROWING
        MANAGE_VEHICLE
        MANAGE_USER
        SUBMIT_REQUEST
    }

    Role <|.. AdminRole
    Role <|.. EmployeeRole
    RoleFactory ..> Role : creates
    User "1" *-- "1..*" Role : roles
    Role --> Permission
    Vehicle --> VehicleStatus

    %% ─────────── State Pattern ───────────
    class BorrowingState {
        <<interface>>
        +approve(BorrowingRequest, String)
        +reject(BorrowingRequest, String)
        +startUse(BorrowingRequest)
        +complete(BorrowingRequest)
        +getStateName() String
    }
    class PendingState {
        +approve(BorrowingRequest, String)
        +reject(BorrowingRequest, String)
    }
    class ApprovedState {
        +startUse(BorrowingRequest)
    }
    class InUseState {
        +complete(BorrowingRequest)
    }
    class ReturnedState
    class RejectedState
    class InvalidStateTransitionException

    BorrowingState <|.. PendingState
    BorrowingState <|.. ApprovedState
    BorrowingState <|.. InUseState
    BorrowingState <|.. ReturnedState
    BorrowingState <|.. RejectedState
    BorrowingRequest --> BorrowingState : state
    PendingState ..> InvalidStateTransitionException : throws
    ApprovedState ..> InvalidStateTransitionException : throws
    InUseState ..> InvalidStateTransitionException : throws

    %% ─────────── Observer Pattern ───────────
    class BorrowingEventPublisher {
        <<abstract>>
        -List~BorrowingEventObserver~ observers
        +addObserver(BorrowingEventObserver)
        +removeObserver(BorrowingEventObserver)
        #notifyApproved(BorrowingRequest)
        #notifyRejected(BorrowingRequest)
        #notifyStarted(BorrowingRequest)
        #notifyCompleted(BorrowingRequest)
    }
    class BorrowingEventObserver {
        <<interface>>
        +onApproved(BorrowingRequest)
        +onRejected(BorrowingRequest)
        +onStarted(BorrowingRequest)
        +onCompleted(BorrowingRequest)
    }
    class EmailNotificationObserver {
        +onApproved(BorrowingRequest)
        +onRejected(BorrowingRequest)
        +onStarted(BorrowingRequest)
        +onCompleted(BorrowingRequest)
    }

    BorrowingEventPublisher --> "0..*" BorrowingEventObserver : notifies
    BorrowingEventObserver <|.. EmailNotificationObserver

    %% ─────────── Strategy Pattern ───────────
    class ConflictCheckStrategy {
        <<interface>>
        +hasConflict(List~BorrowingRequest~, Instant, Instant) boolean
    }
    class StrictOverlapStrategy {
        +hasConflict(List~BorrowingRequest~, Instant, Instant) boolean
    }

    ConflictCheckStrategy <|.. StrictOverlapStrategy
